# streamflow-analytics

./: .gitignore  CHANGELOG.md  LICENSE  Makefile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
airflow/dags/: cancel_flow_backfill.py  cancel_flow_daily.py  ml_retrain_weekly.py
data/synthetic/: generator.py
dbt/: dbt_project.yml
dbt/macros/: classify_cancel_flow_screen.sql
dbt/models/gold/: rpt_cancel_flow_final_metrics.sql  rpt_ipd_detailed_engagement.sql
dbt/models/silver/: stg_cancel_initiations.sql  stg_save_attribution.sql
docs/architecture/: design_document.md
docs/runbooks/: incident_response.md
docs/schema/: rpt_cancel_flow_final_metrics.yaml  rpt_ipd_detailed_engagement.yaml
great_expectations/checkpoints/: cancel_flow_checkpoint.yml
great_expectations/expectations/: rpt_cancel_flow_final_metrics_suite.json  rpt_ipd_detailed_engagement_suite.json
infrastructure/terraform/environments/prod/: main.tf
scripts/: backfill.sh  run_pipeline.sh  run_step.sh
src/api/: main.py
src/bronze/: ixp_assignments.py  raw_events_pipeline.py
src/gold/: final_metrics.py  ipd_engagement.py
src/monitoring/: metrics.py
src/silver/: cancel_initiations.py  save_attribution.py
src/streaming/: churn_model.py  feature_engineering.py  structured_streaming.py
src/utils/: config.py  delta_utils.py  logger.py  spark_session.py
tests/: conftest.py
tests/e2e/: test_pipeline_e2e.py
tests/integration/: test_pipeline_integration.py
tests/unit/: test_cancel_initiations.py  test_data_quality.py  test_save_attribution.py
